--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,10 @@
+<!DOCTYPE html>
 <html>
 <head>
+<title>Page Title</title>
 </head>
 <body>
-<h1>Hello World!</h1>
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
 </body>
 </html>
